# CowabungaLiteWindows

./: .gitignore  CMakeLists.txt  CreateBackup.cpp  CreateBackup.h  HomeScreenApps.cpp  HomeScreenApps.h  README.md  cowlite.rc  devicemanager.cpp  devicemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plistmanager.cpp  plistmanager.h  resources.qrc  tweaks.h  utils.cpp  utils.h
include/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_vfy.h  x509v3.h
statusmanager/: StatusManager.cpp  StatusManager.h  StatusSetter.h  StatusSetter15.cpp  StatusSetter15.h  StatusSetter16.cpp  StatusSetter16.h  StatusSetter16_1.cpp  StatusSetter16_1.h  StatusSetter16_3.cpp  StatusSetter16_3.h  main.cpp
